Replace V8 GC calls with API call

Avoid calling the string version of 'gc()'.

Bug: 889396
Change-Id: I752b7726d11c748c441cc119d015f21a45529305
Reviewed-on: https://chromium-review.googlesource.com/1254204
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595798}
Former-commit-id: 9675cc09e8b35b7c1e2ad15e9827df456c01cb4a