third_party/blink/renderer/bindings/core/v8/script_wrappable_v8_gc_integration_test.cc
@@ -19,12 +19,19 @@ void PreciselyCollectGarbage() {
   ThreadState::Current()->CollectAllGarbage();
 }
 
-void RunV8Scavenger(v8::Isolate* isolate) {
-  V8GCController::CollectGarbage(isolate, true);
+// The following directly calls testing GCs in V8 to avoid cluttering a globally
+// visible interface with calls that have to be carefully staged.
+
+void RunV8MinorGC(v8::Isolate* isolate) {
+  CHECK(isolate);
+  isolate->RequestGarbageCollectionForTesting(
+      v8::Isolate::GarbageCollectionType::kMinorGarbageCollection);
 }
 
-void RunV8FullGc(v8::Isolate* isolate) {
-  V8GCController::CollectGarbage(isolate, false);
+void RunV8FullGC(v8::Isolate* isolate) {
+  CHECK(isolate);
+  isolate->RequestGarbageCollectionForTesting(
+      v8::Isolate::GarbageCollectionType::kFullGarbageCollection);
 }
 
 }  // namespace v8_gc_integration_test
@@ -48,7 +55,7 @@ TEST(ScriptWrappableV8GCIntegrationTest, V8ReportsLiveObjectsDuringFullGc) {
     holder.Reset(isolate, ToV8(object, scope.GetContext()->Global(), isolate));
   }
 
-  v8_gc_integration_test::RunV8FullGc(isolate);
+  v8_gc_integration_test::RunV8MinorGC(isolate);
   v8_gc_integration_test::PreciselyCollectGarbage();
   EXPECT_FALSE(observer.WasCollected());
   holder.Reset();
@@ -79,7 +86,7 @@ TEST(ScriptWrappableV8GCIntegrationTest, V8ReportsLiveObjectsDuringScavenger) {
 
   // Scavenger should not collect JavaScript wrappers that are modified, even if
   // they are otherwise unreachable.
-  v8_gc_integration_test::RunV8Scavenger(isolate);
+  v8_gc_integration_test::RunV8MinorGC(isolate);
   v8_gc_integration_test::PreciselyCollectGarbage();
 
   EXPECT_FALSE(observer.WasCollected());
@@ -101,8 +108,8 @@ TEST(ScriptWrappableV8GCIntegrationTest,
     holder.Reset(isolate, ToV8(object, scope.GetContext()->Global(), isolate));
   }
 
-  v8_gc_integration_test::RunV8Scavenger(isolate);
-  v8_gc_integration_test::RunV8FullGc(isolate);
+  v8_gc_integration_test::RunV8MinorGC(isolate);
+  v8_gc_integration_test::RunV8FullGC(isolate);
   v8_gc_integration_test::PreciselyCollectGarbage();
 
   EXPECT_FALSE(observer.WasCollected());
@@ -124,8 +131,8 @@ TEST(ScriptWrappableV8GCIntegrationTest,
     ToV8(object, scope.GetContext()->Global(), isolate);
   }
 
-  v8_gc_integration_test::RunV8Scavenger(isolate);
-  v8_gc_integration_test::RunV8FullGc(isolate);
+  v8_gc_integration_test::RunV8MinorGC(isolate);
+  v8_gc_integration_test::RunV8FullGC(isolate);
   v8_gc_integration_test::PreciselyCollectGarbage();
 
   EXPECT_TRUE(observer.WasCollected());
